fix(alerts): Improved color contrast to enhance accessibility

--- a/src/components/notification/Notification.scss
+++ b/src/components/notification/Notification.scss
@@ -21,7 +21,7 @@
     margin: 10px auto;
     padding: 10px 10px 10px 20px;
     overflow: hidden;
-    color: $white;
+    color: $bdl-gray;
     font-weight: bold;
     background-color: $bdl-gray-80;
     border-radius: 4px;
@@ -30,15 +30,15 @@
     transition: opacity .1s ease-out;
 
     &.info {
-        background-color: $bdl-green-light;
+        background-color: $bdl-green-light-50;
     }
 
     &.warn {
-        background-color: $bdl-yellorange;
+        background-color: $bdl-yellorange-50;
     }
 
     &.error {
-        background-color: $bdl-watermelon-red;
+        background-color: $bdl-watermelon-red-50;
     }
 
     &.is-hidden {
@@ -55,6 +55,10 @@
     > svg {
         flex: none;
         margin-right: 15px;
+
+        .stroke-color {
+            stroke: $bdl-gray;
+        }
     }
 
     &.wrap > span {
@@ -71,14 +75,15 @@
     button,
     a {
         flex: none;
-        color: $white;
+        color: $bdl-gray;
+        border-color: $bdl-gray;
 
         &.btn.is-disabled,
         &.btn:not(.is-disabled) {
             margin: 0 5px;
             padding: 7px 13px;
             background-color: transparent;
-            border-color: $bdl-gray-10;
+            border-color: $bdl-gray;
         }
 
         &.close-btn {
@@ -91,6 +96,12 @@
             outline: none;
             cursor: pointer;
             opacity: .6;
+
+            .icon-close {
+                .fill-color {
+                    fill: $bdl-gray;
+                }
+            }
         }
     }
 }
